--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/cli": "7.17.0",
     "@babel/preset-env": "7.16.11",
     "jest": "27.5.0",
-    "babel-jest":"27.5.0"
+    "babel-jest": "27.5.0",
+    "babel-loader": "8.2.3"
   },
   "scripts": {
     "test": "test"
