--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@babel/core": "7.17.0",
     "@babel/cli": "7.17.0",
     "@babel/preset-env": "7.16.11",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/preset-react": "7.16.7",
     "jest": "27.5.0",
     "babel-jest": "27.5.0",
-    "babel-loader": "8.2.3"
+    "babel-loader": "8.2.3",
+    "html-webpack-plugin": "5.5.0"
   },
   "scripts": {
+    "build": "webpack",
     "test": "test"
   },
   "author": "Nick Emmerson",
