--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "jest": "27.5.0",
     "babel-jest": "27.5.0",
     "babel-loader": "8.2.3",
-    "html-webpack-plugin": "5.5.0"
+    "html-webpack-plugin": "5.5.0",
+    "@types/react": "17.0.39"
   },
   "scripts": {
     "build": "webpack",
-    "test": "test"
+    "test": "jest"
   },
   "author": "Nick Emmerson",
   "license": "ISC"
