--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/preset-react": "7.16.7",
     "jest": "27.5.0",
-    "babel-jest": "27.5.0",
     "babel-loader": "8.2.3",
     "html-webpack-plugin": "5.5.0",
-    "@types/react": "17.0.39"
+    "@types/react": "17.0.39",
+    "@types/jest": "27.4.0",
+    "@testing-library/react": "12.1.2"
   },
   "scripts": {
     "build": "webpack",
