Begin retrieving data for given player

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,9 @@
         "@babel/preset-env",
         "@babel/preset-typescript",
         "@babel/preset-react"
+    ],
+    "plugins":
+    [
+        "@babel/plugin-transform-runtime"
     ]
 }
