--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "axios": "0.25.0"
   },
   "devDependencies": {
     "webpack": "5.68.0",
@@ -15,6 +16,7 @@
     "@babel/preset-env": "7.16.11",
     "@babel/preset-typescript": "7.16.7",
     "@babel/preset-react": "7.16.7",
+    "@babel/plugin-transform-runtime": "7.17.0",
     "jest": "27.5.0",
     "babel-loader": "8.2.3",
     "html-webpack-plugin": "5.5.0",
