--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/plugin-transform-runtime": "7.17.0",
     "jest": "27.5.0",
     "babel-loader": "8.2.3",
+    "css-loader": "6.6.0",
+    "style-loader": "3.3.1",
     "html-webpack-plugin": "5.5.0",
     "copy-webpack-plugin": "10.2.4",
     "@types/react": "17.0.39",
