--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "axios": "0.25.0"
+    "axios": "0.25.0",
+    "react-query": "3.34.16"
   },
   "devDependencies": {
     "webpack": "5.68.0",
