Altered package.json and regen-d node_modules to try and fix webpack build issue but turns out it was node version on my PC

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chess-spy",
+  "name": "chess-bastard",
   "version": "1.0.0",
   "description": "Spies on my friends playing chess",
   "main": "index.js",
