--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "axios": "0.25.0",
-    "react-query": "3.34.16"
+    "react-query": "3.34.16",
+    "@mliebelt/pgn-parser": "1.4.4"
   },
   "devDependencies": {
     "webpack": "5.68.0",
